# HustRef

./: Makefile  README.md  pyproject.toml  test.md
docs/: architecture.md  test-cases.md  web-ui.md
src/hustref/: __init__.py  cli.py  constants.py  models.py  pipeline.py  testcase_loader.py  validate.py  webapp.py
src/hustref/formatters/: __init__.py  book.py  conference.py  journal.py  patent.py  router.py  thesis.py
src/hustref/normalize/: __init__.py  authors.py  fields.py  punctuation.py  record.py
src/hustref/parsers/: __init__.py  acm_ref.py  bibtex.py  endnote.py
src/hustref/webui/: app.js  index.html  styles.css
tests/fixtures/: sample.bib  sample.endnote.txt  sample.ris
tests/unit/: test_acm_parser.py  test_formatters.py  test_markdown_cases.py  test_normalize_authors.py  test_parsers.py  test_testcase_loader.py  test_validation.py  test_webapp.py
