[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hustref"
version = "0.1.0"
description = "Convert heterogeneous references to HUST thesis style."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
hustref = "hustref.cli:main"
hustref-web = "hustref.webapp:main"

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
pythonpath = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
hustref = ["webui/*.html", "webui/*.css", "webui/*.js"]
